--- a/test_model_quantization.ipynb
+++ b/test_model_quantization.ipynb
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 123,
    "id": "44fb17ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = model(x)"
+    "out_fp32 = model(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 124,
    "id": "060eda5e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "id": "9d3f3458",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
     "print(f'{out.shape}\\n')\n",
     "\n",
     "print_param_dtype(model)\n",
-    "print(out)"
+    "print(out_fp32)"
    ]
   },
   {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 126,
    "id": "d8b98a4f",
    "metadata": {},
    "outputs": [
@@ -128,22 +128,22 @@
       "linear2.bias is loaded in torch.float16\n",
       "bn2.weight is loaded in torch.float16\n",
       "bn2.bias is loaded in torch.float16\n",
-      "tensor([[0.6191, 1.0479, 0.0000, 0.0000, 0.0000, 1.0869, 0.2419, 0.0000],\n",
-      "        [0.0464, 0.0798, 1.3184, 0.5444, 1.0117, 0.0000, 0.0000, 1.1562],\n",
-      "        [0.0000, 0.0000, 1.6455, 0.7954, 1.2188, 0.0000, 0.0000, 1.4307],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.4004, 0.0000, 0.0000, 1.4854, 0.3936],\n",
-      "        [0.1791, 1.6289, 0.0000, 0.0000, 0.0000, 1.1074, 1.3320, 0.0000],\n",
-      "        [0.6855, 0.7944, 0.0000, 0.0000, 0.0480, 1.0254, 0.0101, 0.0000],\n",
-      "        [0.8228, 0.2722, 0.0000, 0.0000, 0.2527, 0.8965, 0.0000, 0.0000],\n",
-      "        [0.8228, 0.2754, 0.0000, 0.0000, 0.2512, 0.8911, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.8057, 0.3936, 0.6445, 0.0000, 0.0000, 0.4932],\n",
-      "        [0.6924, 0.7671, 0.0000, 0.0000, 0.0588, 1.0186, 0.0000, 0.0000],\n",
-      "        [0.3391, 0.0000, 0.0000, 0.0000, 0.0545, 0.5073, 0.0000, 0.0000],\n",
-      "        [0.1407, 0.0000, 0.5967, 0.0000, 0.7773, 0.0000, 0.0000, 0.1981],\n",
-      "        [0.0000, 0.0000, 1.6963, 1.1611, 1.1689, 0.0000, 0.0000, 1.1992],\n",
-      "        [0.8901, 1.0811, 0.7231, 0.4004, 0.0000, 0.0000, 0.0000, 1.5762],\n",
-      "        [0.0000, 0.0000, 0.0000, 2.2520, 0.0000, 0.0000, 2.7676, 0.5566],\n",
-      "        [0.6895, 0.3889, 0.0000, 0.0000, 0.0000, 0.8813, 0.0000, 0.0000]],\n",
+      "tensor([[0.0000, 0.6367, 0.5112, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [1.5693, 0.0000, 0.0391, 0.8013, 0.9004, 0.8857, 0.0000, 0.9736],\n",
+      "        [1.9453, 0.0000, 0.1361, 0.9854, 0.9248, 0.9170, 0.0000, 1.2471],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.8779, 0.0000, 0.0000, 0.7202, 0.8691],\n",
+      "        [0.4875, 0.1903, 0.9209, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3130, 1.5957, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3521, 0.6440, 0.0000, 0.4270, 0.4973, 1.0674, 0.0000],\n",
+      "        [0.0000, 0.3826, 0.2947, 0.0000, 0.5752, 0.6201, 1.1846, 0.0000],\n",
+      "        [0.5059, 0.7412, 0.0000, 0.0000, 0.4177, 0.2469, 0.2820, 0.0000],\n",
+      "        [0.0000, 0.4407, 1.3018, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 1.0303, 0.0000, 0.0000, 0.2856, 0.1292, 0.7261, 0.0000],\n",
+      "        [0.6899, 0.8169, 0.0000, 0.0000, 0.5859, 0.3782, 0.1821, 0.0000],\n",
+      "        [1.2402, 0.3501, 0.0000, 0.0000, 0.5449, 0.3650, 0.0000, 0.1799],\n",
+      "        [0.1732, 0.0000, 1.6240, 2.1992, 1.5488, 2.0137, 0.9492, 1.8008],\n",
+      "        [0.0000, 0.0000, 0.0000, 1.8174, 0.0000, 0.0000, 0.7163, 1.8818],\n",
+      "        [0.0094, 1.0908, 0.0000, 0.0000, 0.1807, 0.0000, 0.3623, 0.0000]],\n",
       "       dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 127,
    "id": "9042c13e",
    "metadata": {},
    "outputs": [
@@ -212,12 +212,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53ac26eb",
+   "metadata": {},
+   "source": [
+    "### Compute output differences between fp32 and bf16"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "95306ef1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean diff: 0.0030533424578607082 | Max diff: 0.029530048370361328\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_diff = torch.abs(out_bf16 - out_fp32).mean().item()\n",
+    "max_diff = torch.abs(out_bf16 - out_fp32).max().item()\n",
+    "\n",
+    "print(f\"Mean diff: {mean_diff} | Max diff: {max_diff}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17bfd383",
+   "metadata": {},
+   "source": [
+    "### Output logits hold similar values, small differences between the full-precision model and the bf16 model.\n",
+    "- Does not lead to a huge performance degradation, even on large models."
+   ]
   }
  ],
  "metadata": {
