use a fine tuned model, else testing will be random

--- a/large_model_quantization.ipynb
+++ b/large_model_quantization.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
-    "model_name = \"distilbert-base-uncased\"\n",
+    "model_name = \"textattack/distilbert-base-uncased-SST-2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=2).to(device)\n",
     "model.eval()"
