--- a/test_model_quantization.ipynb
+++ b/test_model_quantization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "9aca5850",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "id": "44fb17ec",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "id": "060eda5e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "id": "9d3f3458",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "print(f'{out.shape}\\n')\n",
+    "print(f'{out_fp32.shape}\\n')\n",
     "\n",
     "print_param_dtype(model)\n",
     "print(out_fp32)"
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "id": "d8b98a4f",
    "metadata": {},
    "outputs": [
@@ -128,22 +128,22 @@
       "linear2.bias is loaded in torch.float16\n",
       "bn2.weight is loaded in torch.float16\n",
       "bn2.bias is loaded in torch.float16\n",
-      "tensor([[0.0000, 0.6367, 0.5112, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [1.5693, 0.0000, 0.0391, 0.8013, 0.9004, 0.8857, 0.0000, 0.9736],\n",
-      "        [1.9453, 0.0000, 0.1361, 0.9854, 0.9248, 0.9170, 0.0000, 1.2471],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.8779, 0.0000, 0.0000, 0.7202, 0.8691],\n",
-      "        [0.4875, 0.1903, 0.9209, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.3130, 1.5957, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.3521, 0.6440, 0.0000, 0.4270, 0.4973, 1.0674, 0.0000],\n",
-      "        [0.0000, 0.3826, 0.2947, 0.0000, 0.5752, 0.6201, 1.1846, 0.0000],\n",
-      "        [0.5059, 0.7412, 0.0000, 0.0000, 0.4177, 0.2469, 0.2820, 0.0000],\n",
-      "        [0.0000, 0.4407, 1.3018, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 1.0303, 0.0000, 0.0000, 0.2856, 0.1292, 0.7261, 0.0000],\n",
-      "        [0.6899, 0.8169, 0.0000, 0.0000, 0.5859, 0.3782, 0.1821, 0.0000],\n",
-      "        [1.2402, 0.3501, 0.0000, 0.0000, 0.5449, 0.3650, 0.0000, 0.1799],\n",
-      "        [0.1732, 0.0000, 1.6240, 2.1992, 1.5488, 2.0137, 0.9492, 1.8008],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.8174, 0.0000, 0.0000, 0.7163, 1.8818],\n",
-      "        [0.0094, 1.0908, 0.0000, 0.0000, 0.1807, 0.0000, 0.3623, 0.0000]],\n",
+      "tensor([[0.8486, 0.0000, 0.0000, 0.4802, 0.2759, 0.5947, 0.4868, 1.0664],\n",
+      "        [0.7998, 0.5698, 1.0693, 0.0000, 0.2634, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.7627, 0.6064, 1.0752, 0.0000, 0.4399, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 1.2744, 0.0000, 0.0000, 0.0000, 0.0000, 0.9453, 0.0000],\n",
+      "        [1.7471, 0.0000, 0.0000, 0.0000, 0.0000, 1.1406, 1.7861, 1.5146],\n",
+      "        [0.0000, 0.0000, 0.0000, 1.8818, 1.2803, 2.0234, 0.8096, 1.2148],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.8667, 0.3889, 0.1583, 0.0000, 0.3706],\n",
+      "        [0.0000, 0.0000, 0.0506, 0.5288, 0.2461, 0.0000, 0.0000, 0.3501],\n",
+      "        [0.2070, 0.7368, 0.9653, 0.0000, 0.2888, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 1.5957, 1.1260, 1.6377, 0.6152, 1.1406],\n",
+      "        [0.5063, 0.6123, 0.8350, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.7749, 0.5942, 1.0732, 0.0000, 0.3801, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2256, 0.8530, 1.0264, 0.4277, 1.1172, 0.6069, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.1919, 0.3528, 0.1716, 0.0000, 0.0000, 0.3389],\n",
+      "        [0.0000, 1.6133, 0.0000, 0.0000, 0.0000, 0.4614, 2.2129, 0.0000],\n",
+      "        [1.1748, 0.4348, 0.7480, 0.0000, 0.0000, 0.0000, 0.0000, 0.3777]],\n",
       "       dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 30,
    "id": "9042c13e",
    "metadata": {},
    "outputs": [
@@ -182,21 +182,21 @@
       "linear2.bias is loaded in torch.bfloat16\n",
       "bn2.weight is loaded in torch.bfloat16\n",
       "bn2.bias is loaded in torch.bfloat16\n",
-      "tensor([[0.5703, 0.2412, 0.0532, 0.0000, 0.0000, 0.6211, 1.0859, 0.7109],\n",
+      "tensor([[0.5703, 0.2402, 0.0532, 0.0000, 0.0000, 0.6211, 1.0781, 0.7109],\n",
       "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9531, 1.4609, 0.0000, 0.0000, 0.8125, 0.9141, 0.0000, 0.0000],\n",
-      "        [1.9375, 1.6172, 0.0000, 0.0000, 0.0000, 2.0938, 2.4531, 1.3125],\n",
-      "        [0.6328, 0.0000, 0.9062, 0.0000, 0.0000, 0.6055, 1.5078, 1.8203],\n",
+      "        [0.9531, 1.4609, 0.0000, 0.0000, 0.8086, 0.9141, 0.0000, 0.0000],\n",
+      "        [1.9375, 1.6094, 0.0000, 0.0000, 0.0000, 2.0938, 2.4375, 1.3203],\n",
+      "        [0.6328, 0.0000, 0.9062, 0.0000, 0.0000, 0.6055, 1.5000, 1.8203],\n",
       "        [0.0000, 0.0000, 0.8516, 0.0000, 0.0000, 0.0000, 0.2178, 0.9492],\n",
       "        [0.0000, 0.0000, 0.7578, 0.0000, 0.0000, 0.0000, 0.0000, 0.5469],\n",
       "        [0.0000, 0.0000, 0.3320, 0.9961, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.5078, 0.0000, 0.7969, 0.0000, 0.0000, 0.4883, 1.2891, 1.5078],\n",
+      "        [0.5078, 0.0000, 0.7969, 0.0000, 0.0000, 0.4883, 1.2812, 1.5156],\n",
       "        [0.0000, 0.0000, 0.0466, 0.8281, 0.6523, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.3867, 0.4434, 1.0312, 0.0000, 0.0000, 0.3262],\n",
-      "        [2.2188, 2.7656, 0.0000, 0.0000, 0.9336, 2.0938, 0.0000, 0.0378],\n",
+      "        [0.0000, 0.0000, 0.3867, 0.4434, 1.0312, 0.0000, 0.0000, 0.3301],\n",
+      "        [2.2188, 2.7656, 0.0000, 0.0000, 0.9336, 2.0938, 0.0000, 0.0415],\n",
       "        [0.0000, 0.0000, 0.0664, 0.7070, 0.3750, 0.0000, 0.0000, 0.0000]],\n",
       "       dtype=torch.bfloat16, grad_fn=<ReluBackward0>)\n"
      ]
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "id": "95306ef1",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean diff: 0.0030533424578607082 | Max diff: 0.029530048370361328\n"
+      "Mean diff: 0.00309927249327302 | Max diff: 0.029530048370361328\n"
      ]
     }
    ],
