vision-language model test

--- a/large_model_quantization.ipynb
+++ b/large_model_quantization.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "2cb2e846",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,14 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "results_bf16 = get_generation(model_blip_bf16, \n",
+    "                              processor, \n",
+    "                              image, \n",
+    "                              torch.bfloat16)\n",
+    "\n",
+    "print(\"bf16 Model Results:\\n\", results_bf16)"
+   ]
   }
  ],
  "metadata": {
