--- a/test_model_quantization.ipynb
+++ b/test_model_quantization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "9aca5850",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,15 @@
     "torch.manual_seed(42)\n",
     "torch.cuda.manual_seed_all(42)\n",
     "\n",
-    "model = TestModel()\n",
-    "x = torch.randn(16, 2)"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "model = TestModel().to(device)\n",
+    "x = torch.randn(16, 2).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "44fb17ec",
    "metadata": {},
    "outputs": [],
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "060eda5e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "9d3f3458",
    "metadata": {},
    "outputs": [
@@ -71,8 +73,8 @@
       "         2.4531e+00, 1.3174e+00],\n",
       "        [6.1562e-01, 0.0000e+00, 9.0805e-01, 0.0000e+00, 0.0000e+00, 6.0938e-01,\n",
       "         1.4962e+00, 1.8144e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 8.6516e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
-      "         2.1918e-01, 9.4862e-01],\n",
+      "        [0.0000e+00, 0.0000e+00, 8.6517e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+      "         2.1918e-01, 9.4861e-01],\n",
       "        [0.0000e+00, 0.0000e+00, 7.5170e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
       "         0.0000e+00, 5.5284e-01],\n",
       "        [0.0000e+00, 0.0000e+00, 3.2644e-01, 9.9761e-01, 6.2450e-01, 0.0000e+00,\n",
@@ -88,9 +90,9 @@
       "        [0.0000e+00, 0.0000e+00, 4.0321e-01, 4.4512e-01, 1.0282e+00, 0.0000e+00,\n",
       "         0.0000e+00, 3.3842e-01],\n",
       "        [2.2022e+00, 2.7564e+00, 0.0000e+00, 0.0000e+00, 9.3582e-01, 2.0962e+00,\n",
-      "         2.7560e-03, 3.9908e-02],\n",
+      "         2.7561e-03, 3.9908e-02],\n",
       "        [0.0000e+00, 0.0000e+00, 5.2909e-02, 7.0718e-01, 3.8479e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00]], grad_fn=<ReluBackward0>)\n"
+      "         0.0000e+00, 0.0000e+00]], device='cuda:0', grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
@@ -112,7 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
+   "id": "3197a1f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_fp16 = TestModel().to(dtype = torch.float16, device = device) # or TestModel().half()\n",
+    "x = x.to(torch.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "d8b98a4f",
    "metadata": {},
    "outputs": [
@@ -128,30 +141,29 @@
       "linear2.bias is loaded in torch.float16\n",
       "bn2.weight is loaded in torch.float16\n",
       "bn2.bias is loaded in torch.float16\n",
-      "tensor([[0.8486, 0.0000, 0.0000, 0.4802, 0.2759, 0.5947, 0.4868, 1.0664],\n",
-      "        [0.7998, 0.5698, 1.0693, 0.0000, 0.2634, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.7627, 0.6064, 1.0752, 0.0000, 0.4399, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 1.2744, 0.0000, 0.0000, 0.0000, 0.0000, 0.9453, 0.0000],\n",
-      "        [1.7471, 0.0000, 0.0000, 0.0000, 0.0000, 1.1406, 1.7861, 1.5146],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.8818, 1.2803, 2.0234, 0.8096, 1.2148],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.8667, 0.3889, 0.1583, 0.0000, 0.3706],\n",
-      "        [0.0000, 0.0000, 0.0506, 0.5288, 0.2461, 0.0000, 0.0000, 0.3501],\n",
-      "        [0.2070, 0.7368, 0.9653, 0.0000, 0.2888, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.5957, 1.1260, 1.6377, 0.6152, 1.1406],\n",
-      "        [0.5063, 0.6123, 0.8350, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.7749, 0.5942, 1.0732, 0.0000, 0.3801, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.2256, 0.8530, 1.0264, 0.4277, 1.1172, 0.6069, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.1919, 0.3528, 0.1716, 0.0000, 0.0000, 0.3389],\n",
-      "        [0.0000, 1.6133, 0.0000, 0.0000, 0.0000, 0.4614, 2.2129, 0.0000],\n",
-      "        [1.1748, 0.4348, 0.7480, 0.0000, 0.0000, 0.0000, 0.0000, 0.3777]],\n",
-      "       dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
+      "tensor([[0.0000, 0.1044, 0.0000, 0.0000, 0.9800, 0.0000, 0.7773, 0.0000],\n",
+      "        [0.7139, 0.0000, 0.4041, 0.0000, 0.0000, 0.0000, 0.0000, 0.7212],\n",
+      "        [0.7827, 0.0000, 0.7378, 0.0000, 0.0000, 0.0000, 0.0000, 1.1035],\n",
+      "        [0.0000, 0.7319, 1.1123, 1.7871, 0.1461, 1.7012, 0.0000, 0.9907],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.1715, 1.3926, 0.2062, 0.4624, 0.0000],\n",
+      "        [0.6343, 0.0000, 0.0000, 0.0000, 0.4487, 0.0000, 1.3262, 0.0000],\n",
+      "        [0.5684, 0.0000, 0.0000, 0.0000, 0.5239, 0.0000, 1.2363, 0.0000],\n",
+      "        [0.4905, 0.0000, 0.0000, 0.0000, 0.6133, 0.0000, 1.1309, 0.0000],\n",
+      "        [0.0703, 1.0273, 0.0000, 0.3337, 0.0000, 0.4602, 0.0000, 0.2517],\n",
+      "        [0.5620, 0.0000, 0.0000, 0.0000, 0.5312, 0.0000, 1.2275, 0.0000],\n",
+      "        [0.0000, 1.1113, 0.0000, 0.1066, 0.8315, 0.4434, 0.1965, 0.0000],\n",
+      "        [0.2188, 0.9893, 0.0000, 0.0443, 0.0000, 0.2361, 0.0000, 0.0000],\n",
+      "        [0.3367, 0.9355, 0.8735, 0.5889, 0.0000, 0.4924, 0.0000, 1.3184],\n",
+      "        [1.4463, 0.0000, 1.4355, 0.0000, 0.0000, 0.0000, 0.2500, 1.0049],\n",
+      "        [0.0000, 0.1748, 2.3223, 2.7363, 0.0000, 2.3379, 0.0000, 1.9580],\n",
+      "        [0.0000, 0.9790, 0.0000, 0.0000, 1.1816, 0.2277, 0.5024, 0.0000]],\n",
+      "       device='cuda:0', dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "model_fp16 = TestModel().to(torch.float16) # or TestModel().half()\n",
     "print_param_dtype(model_fp16)\n",
-    "out_fp16 = model_fp16(x.to(torch.float16))\n",
+    "out_fp16 = model_fp16(x)\n",
     "print(out_fp16)"
    ]
   },
