--- a/test_model_quantization.ipynb
+++ b/test_model_quantization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "9aca5850",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,13 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "model = TestModel().to(device)\n",
+    "model.eval()\n",
     "x = torch.randn(16, 2).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "44fb17ec",
    "metadata": {},
    "outputs": [],
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "060eda5e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "9d3f3458",
    "metadata": {},
    "outputs": [
@@ -61,38 +62,23 @@
       "linear2.bias is loaded in torch.float32\n",
       "bn2.weight is loaded in torch.float32\n",
       "bn2.bias is loaded in torch.float32\n",
-      "tensor([[5.6570e-01, 2.6057e-01, 6.0959e-02, 0.0000e+00, 0.0000e+00, 6.4186e-01,\n",
-      "         1.0861e+00, 7.2191e-01],\n",
-      "        [0.0000e+00, 0.0000e+00, 3.4649e-01, 1.0093e+00, 6.2260e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 3.4649e-01, 1.0093e+00, 6.2260e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [9.5711e-01, 1.4652e+00, 0.0000e+00, 0.0000e+00, 8.1230e-01, 9.1862e-01,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [1.9353e+00, 1.6048e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 2.0986e+00,\n",
-      "         2.4531e+00, 1.3174e+00],\n",
-      "        [6.1562e-01, 0.0000e+00, 9.0805e-01, 0.0000e+00, 0.0000e+00, 6.0938e-01,\n",
-      "         1.4962e+00, 1.8144e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 8.6517e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
-      "         2.1918e-01, 9.4861e-01],\n",
-      "        [0.0000e+00, 0.0000e+00, 7.5170e-01, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
-      "         0.0000e+00, 5.5284e-01],\n",
-      "        [0.0000e+00, 0.0000e+00, 3.2644e-01, 9.9761e-01, 6.2450e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [4.7828e-01, 0.0000e+00, 8.0329e-01, 0.0000e+00, 0.0000e+00, 4.8366e-01,\n",
-      "         1.2734e+00, 1.5000e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 4.4752e-02, 8.3378e-01, 6.5123e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 3.4649e-01, 1.0093e+00, 6.2260e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 3.4649e-01, 1.0093e+00, 6.2260e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00],\n",
-      "        [0.0000e+00, 0.0000e+00, 4.0321e-01, 4.4512e-01, 1.0282e+00, 0.0000e+00,\n",
-      "         0.0000e+00, 3.3842e-01],\n",
-      "        [2.2022e+00, 2.7564e+00, 0.0000e+00, 0.0000e+00, 9.3582e-01, 2.0962e+00,\n",
-      "         2.7561e-03, 3.9908e-02],\n",
-      "        [0.0000e+00, 0.0000e+00, 5.2909e-02, 7.0718e-01, 3.8479e-01, 0.0000e+00,\n",
-      "         0.0000e+00, 0.0000e+00]], device='cuda:0', grad_fn=<ReluBackward0>)\n"
+      "tensor([[0.8541, 0.1149, 0.1141, 0.0000, 0.1887, 0.2379, 0.0000, 0.4394],\n",
+      "        [0.4347, 0.0000, 0.1950, 0.0000, 0.4956, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4341, 0.0000, 0.1766, 0.0000, 0.5147, 0.0000, 0.0000, 0.0000],\n",
+      "        [1.0019, 0.3521, 0.0000, 0.0000, 0.4951, 0.2923, 0.0000, 0.1099],\n",
+      "        [1.0963, 0.3803, 0.0000, 0.0000, 0.0000, 0.5342, 0.0000, 0.5385],\n",
+      "        [0.7830, 0.0401, 0.2393, 0.0000, 0.0000, 0.2328, 0.0000, 0.5426],\n",
+      "        [0.6002, 0.0000, 0.2864, 0.0000, 0.2534, 0.0000, 0.0000, 0.4049],\n",
+      "        [0.5767, 0.0000, 0.2725, 0.0000, 0.3464, 0.0000, 0.0000, 0.3579],\n",
+      "        [0.6742, 0.0000, 0.0204, 0.0000, 0.5273, 0.0000, 0.0000, 0.0123],\n",
+      "        [0.7778, 0.0336, 0.2204, 0.0000, 0.0496, 0.2069, 0.0000, 0.5090],\n",
+      "        [0.7365, 0.0000, 0.0279, 0.0000, 0.5000, 0.0000, 0.0000, 0.1304],\n",
+      "        [0.6282, 0.0000, 0.0661, 0.0000, 0.5175, 0.0000, 0.0000, 0.0361],\n",
+      "        [0.5996, 0.0000, 0.0721, 0.0000, 0.4762, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4528, 0.0000, 0.3086, 0.0000, 0.3910, 0.0000, 0.0000, 0.2445],\n",
+      "        [1.2147, 0.6358, 0.0000, 0.0000, 0.4689, 0.5673, 0.0000, 0.1717],\n",
+      "        [0.7431, 0.0000, 0.0706, 0.0000, 0.4569, 0.0176, 0.0000, 0.2241]],\n",
+      "       device='cuda:0', grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
@@ -109,23 +95,25 @@
    "metadata": {},
    "source": [
     "### Cast test model into float16 (Half).\n",
-    "- Outputs of the model are random, and change every time, even with a set seed. On such small values, the low-precision attribute of float16 bakes in rounding errors through multiple layers; in this case, batch norm, ReLU (removes negative values), linear. This generates different model outputs every run, in contrast to float32. float16 is also not supposed on some CPU kernels -> not an ideal data type in many cases."
+    "- Casting the entire model to fp16 interacts badly with batch norm layers. \n",
+    "- float16 is also not supposed on some CPU kernels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "3197a1f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_fp16 = TestModel().to(dtype = torch.float16, device = device) # or TestModel().half()\n",
+    "model_fp16.eval()\n",
     "x = x.to(torch.float16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "d8b98a4f",
    "metadata": {},
    "outputs": [
@@ -141,22 +129,22 @@
       "linear2.bias is loaded in torch.float16\n",
       "bn2.weight is loaded in torch.float16\n",
       "bn2.bias is loaded in torch.float16\n",
-      "tensor([[0.0000, 0.1044, 0.0000, 0.0000, 0.9800, 0.0000, 0.7773, 0.0000],\n",
-      "        [0.7139, 0.0000, 0.4041, 0.0000, 0.0000, 0.0000, 0.0000, 0.7212],\n",
-      "        [0.7827, 0.0000, 0.7378, 0.0000, 0.0000, 0.0000, 0.0000, 1.1035],\n",
-      "        [0.0000, 0.7319, 1.1123, 1.7871, 0.1461, 1.7012, 0.0000, 0.9907],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.1715, 1.3926, 0.2062, 0.4624, 0.0000],\n",
-      "        [0.6343, 0.0000, 0.0000, 0.0000, 0.4487, 0.0000, 1.3262, 0.0000],\n",
-      "        [0.5684, 0.0000, 0.0000, 0.0000, 0.5239, 0.0000, 1.2363, 0.0000],\n",
-      "        [0.4905, 0.0000, 0.0000, 0.0000, 0.6133, 0.0000, 1.1309, 0.0000],\n",
-      "        [0.0703, 1.0273, 0.0000, 0.3337, 0.0000, 0.4602, 0.0000, 0.2517],\n",
-      "        [0.5620, 0.0000, 0.0000, 0.0000, 0.5312, 0.0000, 1.2275, 0.0000],\n",
-      "        [0.0000, 1.1113, 0.0000, 0.1066, 0.8315, 0.4434, 0.1965, 0.0000],\n",
-      "        [0.2188, 0.9893, 0.0000, 0.0443, 0.0000, 0.2361, 0.0000, 0.0000],\n",
-      "        [0.3367, 0.9355, 0.8735, 0.5889, 0.0000, 0.4924, 0.0000, 1.3184],\n",
-      "        [1.4463, 0.0000, 1.4355, 0.0000, 0.0000, 0.0000, 0.2500, 1.0049],\n",
-      "        [0.0000, 0.1748, 2.3223, 2.7363, 0.0000, 2.3379, 0.0000, 1.9580],\n",
-      "        [0.0000, 0.9790, 0.0000, 0.0000, 1.1816, 0.2277, 0.5024, 0.0000]],\n",
+      "tensor([[0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
+      "        [0.4341, 0.2399, 0.2913, 0.0344, 0.5327, 0.1770, 0.1666, 0.0000],\n",
+      "        [0.4849, 0.2382, 0.3276, 0.0719, 0.5742, 0.1587, 0.1602, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.6655, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
+      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
+      "        [0.1552, 0.2537, 0.1135, 0.0000, 0.2791, 0.2722, 0.2109, 0.0000],\n",
+      "        [0.1766, 0.2510, 0.1261, 0.0000, 0.2888, 0.2776, 0.2241, 0.0000],\n",
+      "        [0.0000, 0.1134, 0.0000, 0.0000, 0.4780, 0.0280, 0.0000, 0.0000],\n",
+      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
+      "        [0.0000, 0.1353, 0.0170, 0.0000, 0.4148, 0.1423, 0.0012, 0.0000],\n",
+      "        [0.0000, 0.1606, 0.0183, 0.0000, 0.4238, 0.0858, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0879, 0.0000, 0.0000, 0.5459, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9155, 0.2529, 0.5767, 0.6074, 0.5737, 0.4033, 0.6074, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.7979, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0408, 0.1653, 0.0358, 0.0000, 0.3623, 0.2208, 0.1094, 0.0000]],\n",
       "       device='cuda:0', dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -169,11 +157,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2549cd8a",
+   "metadata": {},
+   "source": [
+    "#### Instead, cast using mixed precision:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e7e0a6ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.8540, 0.1149, 0.1140, 0.0000, 0.1888, 0.2378, 0.0000, 0.4390],\n",
+      "        [0.4348, 0.0000, 0.1949, 0.0000, 0.4956, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4341, 0.0000, 0.1765, 0.0000, 0.5146, 0.0000, 0.0000, 0.0000],\n",
+      "        [1.0020, 0.3521, 0.0000, 0.0000, 0.4951, 0.2925, 0.0000, 0.1100],\n",
+      "        [1.0967, 0.3809, 0.0000, 0.0000, 0.0000, 0.5347, 0.0000, 0.5386],\n",
+      "        [0.7832, 0.0404, 0.2394, 0.0000, 0.0000, 0.2334, 0.0000, 0.5425],\n",
+      "        [0.6006, 0.0000, 0.2861, 0.0000, 0.2537, 0.0000, 0.0000, 0.4048],\n",
+      "        [0.5767, 0.0000, 0.2725, 0.0000, 0.3467, 0.0000, 0.0000, 0.3579],\n",
+      "        [0.6743, 0.0000, 0.0203, 0.0000, 0.5273, 0.0000, 0.0000, 0.0123],\n",
+      "        [0.7778, 0.0338, 0.2205, 0.0000, 0.0494, 0.2075, 0.0000, 0.5088],\n",
+      "        [0.7363, 0.0000, 0.0278, 0.0000, 0.5000, 0.0000, 0.0000, 0.1305],\n",
+      "        [0.6284, 0.0000, 0.0658, 0.0000, 0.5176, 0.0000, 0.0000, 0.0363],\n",
+      "        [0.5996, 0.0000, 0.0719, 0.0000, 0.4763, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4529, 0.0000, 0.3083, 0.0000, 0.3911, 0.0000, 0.0000, 0.2445],\n",
+      "        [1.2148, 0.6357, 0.0000, 0.0000, 0.4690, 0.5669, 0.0000, 0.1718],\n",
+      "        [0.7432, 0.0000, 0.0703, 0.0000, 0.4570, 0.0178, 0.0000, 0.2240]],\n",
+      "       device='cuda:0', dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.amp.autocast(device):\n",
+    "    out_fp16_autocast = model(x)\n",
+    "\n",
+    "print(out_fp16_autocast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4e680d",
+   "metadata": {},
+   "source": [
+    "- Very close to fp32, but might not be ideal for deeper models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8368f074",
    "metadata": {},
    "source": [
     "### Cast test model into bfloat16.\n",
-    "- bfloat16 is stable, unlike float16, and achieves the same outputs after each run with a set seed."
+    "- bfloat16 is a more stable, and better alternative to fp16"
    ]
   },
   {
