--- a/test_model_quantization.ipynb
+++ b/test_model_quantization.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3197a1f0",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d8b98a4f",
    "metadata": {},
    "outputs": [
@@ -129,22 +129,22 @@
       "linear2.bias is loaded in torch.float16\n",
       "bn2.weight is loaded in torch.float16\n",
       "bn2.bias is loaded in torch.float16\n",
-      "tensor([[0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
-      "        [0.4341, 0.2399, 0.2913, 0.0344, 0.5327, 0.1770, 0.1666, 0.0000],\n",
-      "        [0.4849, 0.2382, 0.3276, 0.0719, 0.5742, 0.1587, 0.1602, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.6655, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
-      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
-      "        [0.1552, 0.2537, 0.1135, 0.0000, 0.2791, 0.2722, 0.2109, 0.0000],\n",
-      "        [0.1766, 0.2510, 0.1261, 0.0000, 0.2888, 0.2776, 0.2241, 0.0000],\n",
-      "        [0.0000, 0.1134, 0.0000, 0.0000, 0.4780, 0.0280, 0.0000, 0.0000],\n",
-      "        [0.1161, 0.2583, 0.0906, 0.0000, 0.2610, 0.2627, 0.1870, 0.0000],\n",
-      "        [0.0000, 0.1353, 0.0170, 0.0000, 0.4148, 0.1423, 0.0012, 0.0000],\n",
-      "        [0.0000, 0.1606, 0.0183, 0.0000, 0.4238, 0.0858, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0879, 0.0000, 0.0000, 0.5459, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9155, 0.2529, 0.5767, 0.6074, 0.5737, 0.4033, 0.6074, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.7979, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0408, 0.1653, 0.0358, 0.0000, 0.3623, 0.2208, 0.1094, 0.0000]],\n",
+      "tensor([[0.4246, 0.0000, 0.4304, 0.1505, 0.0000, 0.3469, 0.0000, 0.0000],\n",
+      "        [0.4150, 0.0000, 0.2427, 0.0000, 0.0000, 0.1168, 0.0000, 0.0000],\n",
+      "        [0.4092, 0.0000, 0.2111, 0.0000, 0.0000, 0.0774, 0.0000, 0.0000],\n",
+      "        [0.7656, 0.0000, 0.0596, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4512, 0.0000, 0.4309, 0.1252, 0.0000, 0.3513, 0.0000, 0.0000],\n",
+      "        [0.3823, 0.0000, 0.3418, 0.2600, 0.0000, 0.3010, 0.0000, 0.0000],\n",
+      "        [0.4070, 0.0000, 0.4009, 0.1902, 0.0000, 0.3311, 0.0000, 0.0000],\n",
+      "        [0.4192, 0.0000, 0.4302, 0.1558, 0.0000, 0.3459, 0.0000, 0.0000],\n",
+      "        [0.5723, 0.0000, 0.1881, 0.0000, 0.0000, 0.0723, 0.0000, 0.0000],\n",
+      "        [0.3945, 0.0000, 0.3711, 0.2253, 0.0000, 0.3159, 0.0000, 0.0000],\n",
+      "        [0.5532, 0.0000, 0.2944, 0.0000, 0.0000, 0.1992, 0.0000, 0.0000],\n",
+      "        [0.5298, 0.0000, 0.2433, 0.0000, 0.0000, 0.1335, 0.0000, 0.0000],\n",
+      "        [0.5947, 0.0000, 0.0754, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3989, 0.0000, 0.3818, 0.2122, 0.0000, 0.3213, 0.0000, 0.0000],\n",
+      "        [0.8975, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5269, 0.0000, 0.3679, 0.0000, 0.0000, 0.2852, 0.0000, 0.0000]],\n",
       "       device='cuda:0', dtype=torch.float16, grad_fn=<ReluBackward0>)\n"
      ]
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "e7e0a6ae",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "9042c13e",
    "metadata": {},
    "outputs": [
@@ -235,23 +235,23 @@
       "linear2.bias is loaded in torch.bfloat16\n",
       "bn2.weight is loaded in torch.bfloat16\n",
       "bn2.bias is loaded in torch.bfloat16\n",
-      "tensor([[0.5703, 0.2402, 0.0532, 0.0000, 0.0000, 0.6211, 1.0781, 0.7109],\n",
-      "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9531, 1.4609, 0.0000, 0.0000, 0.8086, 0.9141, 0.0000, 0.0000],\n",
-      "        [1.9375, 1.6094, 0.0000, 0.0000, 0.0000, 2.0938, 2.4375, 1.3203],\n",
-      "        [0.6328, 0.0000, 0.9062, 0.0000, 0.0000, 0.6055, 1.5000, 1.8203],\n",
-      "        [0.0000, 0.0000, 0.8516, 0.0000, 0.0000, 0.0000, 0.2178, 0.9492],\n",
-      "        [0.0000, 0.0000, 0.7578, 0.0000, 0.0000, 0.0000, 0.0000, 0.5469],\n",
-      "        [0.0000, 0.0000, 0.3320, 0.9961, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.5078, 0.0000, 0.7969, 0.0000, 0.0000, 0.4883, 1.2812, 1.5156],\n",
-      "        [0.0000, 0.0000, 0.0466, 0.8281, 0.6523, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.3457, 1.0000, 0.6211, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.3867, 0.4434, 1.0312, 0.0000, 0.0000, 0.3301],\n",
-      "        [2.2188, 2.7656, 0.0000, 0.0000, 0.9336, 2.0938, 0.0000, 0.0415],\n",
-      "        [0.0000, 0.0000, 0.0664, 0.7070, 0.3750, 0.0000, 0.0000, 0.0000]],\n",
-      "       dtype=torch.bfloat16, grad_fn=<ReluBackward0>)\n"
+      "tensor([[0.8516, 0.1133, 0.1152, 0.0000, 0.1914, 0.2344, 0.0000, 0.4395],\n",
+      "        [0.4336, 0.0000, 0.1953, 0.0000, 0.4941, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4336, 0.0000, 0.1768, 0.0000, 0.5156, 0.0000, 0.0000, 0.0000],\n",
+      "        [1.0000, 0.3516, 0.0000, 0.0000, 0.4941, 0.2930, 0.0000, 0.1094],\n",
+      "        [1.0938, 0.3828, 0.0000, 0.0000, 0.0000, 0.5352, 0.0000, 0.5391],\n",
+      "        [0.7812, 0.0410, 0.2412, 0.0000, 0.0000, 0.2344, 0.0000, 0.5469],\n",
+      "        [0.6016, 0.0000, 0.2871, 0.0000, 0.2539, 0.0000, 0.0000, 0.4043],\n",
+      "        [0.5781, 0.0000, 0.2734, 0.0000, 0.3477, 0.0000, 0.0000, 0.3574],\n",
+      "        [0.6719, 0.0000, 0.0215, 0.0000, 0.5234, 0.0000, 0.0000, 0.0117],\n",
+      "        [0.7812, 0.0352, 0.2207, 0.0000, 0.0469, 0.2109, 0.0000, 0.5156],\n",
+      "        [0.7344, 0.0000, 0.0273, 0.0000, 0.5000, 0.0000, 0.0000, 0.1309],\n",
+      "        [0.6289, 0.0000, 0.0664, 0.0000, 0.5156, 0.0000, 0.0000, 0.0352],\n",
+      "        [0.6016, 0.0000, 0.0723, 0.0000, 0.4766, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4531, 0.0000, 0.3086, 0.0000, 0.3906, 0.0000, 0.0000, 0.2441],\n",
+      "        [1.2109, 0.6289, 0.0000, 0.0000, 0.4688, 0.5664, 0.0000, 0.1699],\n",
+      "        [0.7422, 0.0000, 0.0723, 0.0000, 0.4551, 0.0195, 0.0000, 0.2246]],\n",
+      "       device='cuda:0', dtype=torch.bfloat16, grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "95306ef1",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean diff: 0.00309927249327302 | Max diff: 0.029530048370361328\n"
+      "Mean diff: 0.0008002215763553977 | Max diff: 0.006844639778137207\n"
      ]
     }
    ],
